2016-04-27  Carl Hetherington  <cth@carlh.net>

	* Request confirmation before resetting preferences (#867).

2016-04-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.8.0 released.

2016-04-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.20 released.

2016-04-28  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2016-04-27  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.19 released.

2016-04-27  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-04-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.18 released.

2016-04-26  Carl Hetherington  <cth@carlh.net>

	* Fix non-working delete key.

	* Updated ru_RU and uk_UA translations from Igor Voytovich.

	* Updated sv_SE translation from Adam Klotblixt.

	* Updated de_DE translation from Carsten Kurz.

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated es_ES translation from Manuel AC.

2016-04-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.17 released.

2016-04-25  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.7.16 released.

2016-04-25  c.hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* When making up the ISDCF name assume subtitles are burnt in unless
	we know otherwise.

	* Fix saving of modified video frame rates for subtitle content.

2016-04-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.7.15 released.

2016-04-25  Carl Hetherington  <cth@carlh.net>

	* Add cancel option to confirmation dialogue when closing
	the program (#847).

	* Move the reel markers to the top of the timeline (#846).

2016-04-22  c.hetherington  <cth@carlh.net>

	* Arrange buttons to consume less vertical space in the
	KDM creator (#833).

	* Select active channels on opening audio analysis (#802).

	* Disallow KDM until times from being before from times (#821).

	* Warn when loading certificates from files that have