@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2013-2015 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2013-2016 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -45,6 +45,7 @@ public:
 
 	boost::shared_ptr<Cinema> cinema;
 	std::string name;
+	std::string notes;
 	boost::optional<dcp::Certificate> recipient;
 	std::vector<dcp::Certificate> trusted_devices;
 };
