@@ -1,5 +1,7 @@
 2016-04-27  Carl Hetherington  <cth@carlh.net>
 
+	* Add free-text notes field to cinemas and screens.
+
 	* Request confirmation before resetting preferences (#867).
 
 2016-04-29  Carl Hetherington  <cth@carlh.net>
